--- a/gallery.html
+++ b/gallery.html
@@ -52,7 +52,7 @@
         <!-- GALLERY IMAGE -->
 
         <div id="about-div">
-            <img src="./photos/gallery-photos/6.jpg" id="about-image">
+            <img src="./photos/gallery-photos/6.JPG" id="about-image">
             <div id="overlay">
                 <span class="image-title">GALLERY</span>
             </div>
