--- a/members.html
+++ b/members.html
@@ -74,7 +74,7 @@
                         </p>
                     </div>
                 </div>
-                <div class="member-container">
+                <!-- <div class="member-container">
                     <img src="./photos/exec-photos/member.png" class="member-photo">
                     <div class="member-text">
                         <h2 class="name-title">Adam Levy</h2>
@@ -91,7 +91,7 @@
                             Treasurer
                         </p>
                     </div>
-                </div>
+                </div> -->
                 <div class="member-container">
                     <img src="./photos/exec-photos/austin.png" class="member-photo">
                     <div class="member-text">
@@ -128,7 +128,7 @@
                         </p>
                     </div>
                 </div>
-                <div class="member-container">
+                <!-- <div class="member-container">
                     <img src="./photos/exec-photos/member.png" class="member-photo">
                     <div class="member-text">
                         <h2 class="name-title">Ryan Synder</h2>
@@ -145,7 +145,7 @@
                             Social Chair
                         </p>
                     </div>
-                </div>
+                </div> -->
                 <div class="member-container">
                     <img src="./photos/exec-photos/noah.png" class="member-photo">
                     <div class="member-text">
@@ -155,7 +155,7 @@
                         </p>
                     </div>
                 </div>
-                <div class="member-container">
+                <!-- <div class="member-container">
                     <img src="./photos/exec-photos/member.png" class="member-photo">
                     <div class="member-text">
                         <h2 class="name-title">Jon Fitzpatrick</h2>
@@ -172,7 +172,7 @@
                             Vice President of Alumni Relations
                         </p>
                     </div>
-                </div>
+                </div> -->
                 <div class="member-container">
                     <img src="./photos/exec-photos/jason.jpg" class="member-photo">
                     <div class="member-text">
