--- a/index.html
+++ b/index.html
@@ -51,8 +51,11 @@
 
         <!-- HOME IMAGE -->
 
-        <div id="home-div">
-            <img src="./photos/home-image.png" id="home-image">
+        <div id="about-div">
+            <img src="./photos/oldmain.jpeg" id="about-image">
+            <div id="overlay">
+                <span class="image-title">ASU PHI KAPPA TAU</span>
+            </div>
         </div>
 
         <!-- DESCRIPTION -->
