--- a/contact.html
+++ b/contact.html
@@ -7,7 +7,7 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Poppins&display=swap" rel="stylesheet">
-    <title>Home</title>
+    <title>Contact</title>
     <link rel="stylesheet" href="styles.css">
     <link rel="stylesheet" href="mediaqueries.css">
     <link rel="icon" href="photos/logo.png" type="stamp/png">
@@ -35,12 +35,12 @@
             <div class="bar"></div>
             <div class="bar"></div>
             <div class="bar"></div>
-        </div>        
+        </div> 
 
     </header>    
 
     <main>
-        
+
         <!-- SIDE NAV -->
 
         <div id="overlay-container">
@@ -51,48 +51,26 @@
             <a href="contact.html">CONTACT</a>
         </div>
 
-        <!-- HOME IMAGE -->
+        <!-- GALLERY IMAGE -->
 
         <div id="about-div">
-            <img src="./photos/oldmain.jpeg" id="about-image">
+            <img src="./photos/gallery-photos/6.JPG" id="about-image">
             <div id="overlay">
-                <span class="image-title">ASU PHI KAPPA TAU</span>
+                <span class="image-title">GALLERY</span>
             </div>
         </div>
 
-        <!-- DESCRIPTION -->
+        <div class="contact-container">
 
-        <div id="description-div">
-            <div id="sub-description-div">
-                <img src="./photos/crest.png" id="crest">
-                <p class="description-paragraph">
-                    Welcome to Phi Kappa Tau at Arizona State University, where integrity, leadership, and brotherhood shape the core of our fraternity experience. Our members are committed to academic excellence, community service, and personal growth, united by a bond of friendship and shared values. Through leadership opportunities, philanthropic efforts, and a supportive community, we strive to make a meaningful impact both on campus and beyond. Join us in our mission to develop leaders of character and make a lasting difference in the world.
-                </p>
-            </div>
-        </div>
+           
 
-        <!-- TABLE -->
-
-        <div id="table-div">
-            <table>
-                <tr>
-                    <td><h3 class="nums-title">2018</h3></td>
-                    <td><h3 class="nums-title">3.19</h3></td>
-                    <td><h3 class="nums-title">124</h3></td>
-                </tr>
-                <tr>
-                  <td>CHAPTER FOUNDED</td>
-                  <td>CHAPTER GPA</td>
-                  <td>ACTIVE MEMBERS</td>
-                </tr>
-              </table>
         </div>
 
     </main>
 
-     <!-- FOOTER -->
+    <!-- FOOTER -->
 
-     <footer id="footer">
+    <footer id="footer">
         <div id="footer-icons">
             <a href="https://www.instagram.com/asuphitau/" target="_blank">
                 <img src="./photos/instagram-icon.png" class="social-icons" alt="Instagram">
