--- a/gallery.html
+++ b/gallery.html
@@ -7,7 +7,7 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Poppins&display=swap" rel="stylesheet">
-    <title>Phi Kappa Tau</title>
+    <title>Gallery</title>
     <link rel="stylesheet" href="styles.css">
     <link rel="stylesheet" href="mediaqueries.css">
     <link rel="icon" href="photos/logo.png" type="stamp/png">
@@ -26,6 +26,7 @@
             <a href="members.html">MEMBERS</a>
             <a href="history.html">HISTORY</a>
             <a href="gallery.html">GALLERY</a>
+            <a href="contact.html">CONTACT</a>
         </nav>
 
         <!-- HAMBURGER NAV  -->
@@ -47,6 +48,7 @@
             <a href="members.html">MEMBERS</a>
             <a href="history.html">HISTORY</a>
             <a href="gallery.html">GALLERY</a>
+            <a href="contact.html">CONTACT</a>
         </div>
 
         <!-- GALLERY IMAGE -->
