--- a/history.html
+++ b/history.html
@@ -7,7 +7,7 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Poppins&display=swap" rel="stylesheet">
-    <title>Phi Kappa Tau</title>
+    <title>History</title>
     <link rel="stylesheet" href="styles.css">
     <link rel="stylesheet" href="mediaqueries.css">
     <link rel="icon" href="photos/logo.png" type="stamp/png">
@@ -26,6 +26,7 @@
             <a href="members.html">MEMBERS</a>
             <a href="history.html">HISTORY</a>
             <a href="gallery.html">GALLERY</a>
+            <a href="contact.html">CONTACT</a>
         </nav>
 
         <!-- HAMBURGER NAV  -->
@@ -54,6 +55,7 @@
             <a href="members.html">MEMBERS</a>
             <a href="history.html">HISTORY</a>
             <a href="gallery.html">GALLERY</a>
+            <a href="contact.html">CONTACT</a>
         </div>
 
         <div id="history-title">Phi Kappa Tau Timeline</div>
@@ -62,7 +64,7 @@
 
             <div class="checkpoint">
                 <div>
-                    <h3>March 17, 1906</h3>
+                    <h2 class="date-title">March 17, 1906</h2>
                     <p>
                         Phi Kappa Tau was founded at Miami University in Oxford, Ohio. This is the most significant and universally recognized date in Phi Kappa Tau's history, marking the official establishment of the fraternity.
                     </p>
@@ -70,7 +72,7 @@
             </div>
             <div class="checkpoint">
                 <div>
-                    <h3>October 17, 2015</h3>
+                    <h2 class="date-title">October 17, 2015</h2>
                     <p>
                         Phi Kappa Tau's colonization at Arizona State University, signifies a new era of brotherhood and leadership. This pivotal date makes a new chapter of brotherhood and leadership in the fraternity's storied tradition.
                     </p>
@@ -78,7 +80,7 @@
             </div>
             <div class="checkpoint">
                 <div>
-                    <h3>March 17, 2018</h3>
+                    <h2 class="date-title">March 17, 2018</h2>
                     <p>
                         The chartering of Phi Kappa Tau at Arizona State University represents a landmark achievement, fortifying its presence and commitment to cultivating leadership, service, and lifelong bonds among its members. This momentous occasion cements the fraternity’s principles and legacy within the ASU community.
                     </p>
