--- a/members.html
+++ b/members.html
@@ -27,6 +27,7 @@
             <a href="members.html">MEMBERS</a>
             <a href="history.html">HISTORY</a>
             <a href="gallery.html">GALLERY</a>
+            <a href="contact.html">CONTACT</a>
         </nav>
 
         <!-- HAMBURGER NAV  -->
@@ -48,6 +49,7 @@
             <a href="members.html">MEMBERS</a>
             <a href="history.html">HISTORY</a>
             <a href="gallery.html">GALLERY</a>
+            <a href="contact.html">CONTACT</a>
         </div>
 
         <!-- MEMBERS IMAGE -->
