--- a/gallery.html
+++ b/gallery.html
@@ -179,9 +179,9 @@
             <a href="https://www.linkedin.com/company/phi-kappa-tau-fraternity/" target="_blank">
                 <img src="./photos/linkedin-icon.png" class="social-icons" alt="LinkedIn">
             </a>            
-            <!-- <a href="mailto:phikappatauasu@gmail.com">
+            <a href="mailto:phikappatauasu@gmail.com">
                 <img src="./photos/email-icon.png" class="social-icons" alt="Email Phi Kappa Tau ASU">
-            </a> -->
+            </a>
         </div>
     </footer>
     
