--- a/members.html
+++ b/members.html
@@ -1,9 +1,8 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta charset="utf-8">
+    <meta name="description" content="Phi Kappa Tau Members Page shows the displays board of the fraternity">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Poppins&display=swap" rel="stylesheet">
@@ -70,9 +69,9 @@
                 <div class="member-container">
                     <img src="./photos/exec-photos/cam.jpg" class="member-photo">
                     <div class="member-text">
-                        <h2 class="name-title">Cameron Knight</h2>
+                        <h2 class="name-title">Cam Knight &nbsp;| &nbsp;President</h2>
                         <p class="member-description">
-                            President
+                            Hi, I’m Jason! I am currently a sophomore studying finance. I’m from Pleasanton, California and recently moved to Colorado. Some things I love to do are snowboarding and listening to music. 
                         </p>
                     </div>
                 </div>
@@ -97,36 +96,57 @@
                 <div class="member-container">
                     <img src="./photos/exec-photos/austin.png" class="member-photo">
                     <div class="member-text">
-                        <h2 class="name-title">Austin Amelse</h2>
+                        <h2 class="name-title">Austin Amelse &nbsp;| &nbsp;Secretary</h2>
                         <p class="member-description">
-                            Secretary
+                            Hi, I’m Jason! I am currently a sophomore studying finance. I’m from Pleasanton, California and recently moved to Colorado. Some things I love to do are snowboarding and listening to music. 
                         </p>
                     </div>
                 </div>
                 <div class="member-container">
                     <img src="./photos/exec-photos/cian.jpg" class="member-photo">
                     <div class="member-text">
-                        <h2 class="name-title">Cian Rose</h2>
+                        <h2 class="name-title">Cian Rose &nbsp;| &nbsp;Membership Orientation Officer</h2>
                         <p class="member-description">
-                            Membership Orientation Officer
+                            Hi, I’m Jason! I am currently a sophomore studying finance. I’m from Pleasanton, California and recently moved to Colorado. Some things I love to do are snowboarding and listening to music. 
+                        </p>
+                    </div>
+                </div>
+                <div class="member-container">
+                    <img src="./photos/exec-photos/noah.png" class="member-photo">
+                    <div class="member-text">
+                        <h2 class="name-title">Noah Greene &nbsp;| &nbsp;Prevention & Wellness</h2>
+                        <p class="member-description">
+                            Hi, I’m Jason! I am currently a sophomore studying finance. I’m from Pleasanton, California and recently moved to Colorado. Some things I love to do are snowboarding and listening to music. 
+                        </p>
+                    </div>
+                </div>
+                <div class="member-container">
+                    <img src="./photos/exec-photos/jason.jpg" class="member-photo">
+                    <div class="member-text">
+                        <h2 class="name-title">Jason Johnson &nbsp;| &nbsp;Warden</h2>
+                        <!-- <p class="member-description">
+                            Warden
+                        </p> -->
+                        <p class="member-description">
+                            Hi, I’m Jason! I am currently a sophomore studying finance. I’m from Pleasanton, California and recently moved to Colorado. Some things I love to do are snowboarding and listening to music. 
                         </p>
                     </div>
                 </div>
                 <div class="member-container">
                     <img src="./photos/exec-photos/justin.jpg" class="member-photo">
                     <div class="member-text">
-                        <h2 class="name-title">Justin Chin</h2>
+                        <h2 class="name-title">Justin Chin &nbsp;| &nbsp;Scholarship</h2>
                         <p class="member-description">
-                            Scholarship
+                            Hi, I’m Jason! I am currently a sophomore studying finance. I’m from Pleasanton, California and recently moved to Colorado. Some things I love to do are snowboarding and listening to music. 
                         </p>
                     </div>
                 </div>
                 <div class="member-container">
                     <img src="./photos/exec-photos/mike.png" class="member-photo">
                     <div class="member-text">
-                        <h2 class="name-title">Mike Andrews</h2>
+                        <h2 class="name-title">Mike Andrews &nbsp;| &nbsp;Rush</h2>
                         <p class="member-description">
-                            Rush Chair
+                            Hi, I’m Jason! I am currently a sophomore studying finance. I’m from Pleasanton, California and recently moved to Colorado. Some things I love to do are snowboarding and listening to music. 
                         </p>
                     </div>
                 </div>
@@ -148,15 +168,6 @@
                         </p>
                     </div>
                 </div> -->
-                <div class="member-container">
-                    <img src="./photos/exec-photos/noah.png" class="member-photo">
-                    <div class="member-text">
-                        <h2 class="name-title">Noah Greene</h2>
-                        <p class="member-description">
-                            Prevention & Wellness
-                        </p>
-                    </div>
-                </div>
                 <!-- <div class="member-container">
                     <img src="./photos/exec-photos/member.png" class="member-photo">
                     <div class="member-text">
@@ -175,16 +186,6 @@
                         </p>
                     </div>
                 </div> -->
-                <div class="member-container">
-                    <img src="./photos/exec-photos/jason.jpg" class="member-photo">
-                    <div class="member-text">
-                        <h2 class="name-title">Jason Johnson</h2>
-                        <p class="member-description">
-                            Warden
-                        </p>
-                    </div>
-                </div>
-
             </div>
 
         </div>
