--- a/members.html
+++ b/members.html
@@ -98,7 +98,7 @@
                     <div class="member-text">
                         <h2 class="name-title">Austin Amelse &nbsp;| &nbsp;Secretary</h2>
                         <p class="member-description">
-                            Hi, I’m Jason! I am currently a sophomore studying finance. I’m from Pleasanton, California and recently moved to Colorado. Some things I love to do are snowboarding and listening to music. 
+                            Hi, I'm Jason! I am currently a sophomore studying finance. I'm from Pleasanton, California and recently moved to Colorado. Some things I love to do are snowboarding and listening to music. 
                         </p>
                     </div>
                 </div>
@@ -107,7 +107,7 @@
                     <div class="member-text">
                         <h2 class="name-title">Cian Rose &nbsp;| &nbsp;Membership Orientation Officer</h2>
                         <p class="member-description">
-                            Hi, I’m Jason! I am currently a sophomore studying finance. I’m from Pleasanton, California and recently moved to Colorado. Some things I love to do are snowboarding and listening to music. 
+                            Hi, I'm Jason! I am currently a sophomore studying finance. I'm from Pleasanton, California and recently moved to Colorado. Some things I love to do are snowboarding and listening to music. 
                         </p>
                     </div>
                 </div>
@@ -116,7 +116,7 @@
                     <div class="member-text">
                         <h2 class="name-title">Noah Greene &nbsp;| &nbsp;Prevention & Wellness</h2>
                         <p class="member-description">
-                            Hi, I’m Jason! I am currently a sophomore studying finance. I’m from Pleasanton, California and recently moved to Colorado. Some things I love to do are snowboarding and listening to music. 
+                            Hi, I'm Jason! I am currently a sophomore studying finance. I'm from Pleasanton, California and recently moved to Colorado. Some things I love to do are snowboarding and listening to music. 
                         </p>
                     </div>
                 </div>
@@ -128,7 +128,7 @@
                             Warden
                         </p> -->
                         <p class="member-description">
-                            Hi, I’m Jason! I am currently a sophomore studying finance. I’m from Pleasanton, California and recently moved to Colorado. Some things I love to do are snowboarding and listening to music. 
+                            Hi, I'm Jason! I am currently a sophomore studying finance. I'm from Pleasanton, California and recently moved to Colorado. Some things I love to do are snowboarding and listening to music. 
                         </p>
                     </div>
                 </div>
@@ -137,7 +137,7 @@
                     <div class="member-text">
                         <h2 class="name-title">Justin Chin &nbsp;| &nbsp;Scholarship</h2>
                         <p class="member-description">
-                            Hi, I’m Jason! I am currently a sophomore studying finance. I’m from Pleasanton, California and recently moved to Colorado. Some things I love to do are snowboarding and listening to music. 
+                            Hi, I'm Jason! I am currently a sophomore studying finance. I'm from Pleasanton, California and recently moved to Colorado. Some things I love to do are snowboarding and listening to music. 
                         </p>
                     </div>
                 </div>
@@ -146,7 +146,7 @@
                     <div class="member-text">
                         <h2 class="name-title">Mike Andrews &nbsp;| &nbsp;Rush</h2>
                         <p class="member-description">
-                            Hi, I’m Jason! I am currently a sophomore studying finance. I’m from Pleasanton, California and recently moved to Colorado. Some things I love to do are snowboarding and listening to music. 
+                            Hi, I'm Jason! I am currently a sophomore studying finance. I'm from Pleasanton, California and recently moved to Colorado. Some things I love to do are snowboarding and listening to music. 
                         </p>
                     </div>
                 </div>
