--- a/contact.html
+++ b/contact.html
@@ -50,7 +50,7 @@
             <a href="contact.html">CONTACT</a>
         </div>
 
-        <!-- GALLERY IMAGE -->
+        <!-- CONTACT IMAGE -->
 
         <div id="about-div">
             <img src="./photos/contact.JPG" id="about-image">
