--- a/contact.html
+++ b/contact.html
@@ -53,7 +53,7 @@
         <!-- CONTACT IMAGE -->
 
         <div id="about-div">
-            <img src="./photos/contact.JPG" id="about-image">
+            <img src="./photos/contact.jpg" id="about-image">
             <div id="overlay">
                 <span class="image-title">CONTACT</span>
             </div>
