--- a/gallery.html
+++ b/gallery.html
@@ -53,7 +53,7 @@
         <!-- GALLERY IMAGE -->
 
         <div id="about-div">
-            <img src="./photos/gallery-photos/6.JPG" id="about-image">
+            <img src="./photos/gallery-photos/6.JPG" id="about-image" alt="Gallery Photo">
             <div id="overlay">
                 <span class="image-title">GALLERY</span>
             </div>
