--- a/history.html
+++ b/history.html
@@ -41,7 +41,7 @@
     <main>
     
         <div id="history-div">
-            <img src="./photos/vintage-okt.jpeg" id="history-image">
+            <img src="./photos/vintage-okt.jpeg" id="history-image" alt="History Photo">
             <div id="overlay">
                 <span class="image-title">HISTORY</span>
             </div>
