--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
         <!-- HOME IMAGE -->
 
         <div id="about-div">
-            <img src="./photos/oldmain.jpeg" id="about-image">
+            <img src="./photos/oldmain.jpeg" id="about-image" alt="ASU Old Main">
             <div id="overlay">
                 <span class="image-title">ASU PHI KAPPA TAU</span>
             </div>
@@ -63,7 +63,7 @@
 
         <div id="description-div">
             <div id="sub-description-div">
-                <img src="./photos/crest.png" id="crest">
+                <img src="./photos/crest.png" id="crest" alt="Phi Kappa Tau Crest">
                 <p class="description-paragraph">
                     Welcome to Phi Kappa Tau at Arizona State University, where integrity, leadership, and brotherhood shape the core of our fraternity experience. Our members are committed to academic excellence, community service, and personal growth, united by a bond of friendship and shared values. Through leadership opportunities, philanthropic efforts, and a supportive community, we strive to make a meaningful impact both on campus and beyond. Join us in our mission to develop leaders of character and make a lasting difference in the world.
                 </p>
