--- a/members.html
+++ b/members.html
@@ -54,7 +54,7 @@
         <!-- MEMBERS IMAGE -->
 
         <div id="about-div">
-            <img src="./photos/members.jpg" id="about-image">
+            <img src="./photos/members.jpg" id="about-image" alt="Members Photo">
             <div id="overlay">
                 <span class="image-title">MEMBERS</span>
             </div>
@@ -67,125 +67,68 @@
                 <div id="members-title">Meet The Brothers</div>
 
                 <div class="member-container">
-                    <img src="./photos/exec-photos/cam.jpg" class="member-photo">
+                    <img src="./photos/exec-photos/cam.jpg" class="member-photo" alt="Member Photo">
                     <div class="member-text">
                         <h2 class="name-title">Cam Knight &nbsp;| &nbsp;President</h2>
                         <p class="member-description">
-                            Hi, I’m Jason! I am currently a sophomore studying finance. I’m from Pleasanton, California and recently moved to Colorado. Some things I love to do are snowboarding and listening to music. 
-                        </p>
-                    </div>
-                </div>
-                <!-- <div class="member-container">
-                    <img src="./photos/exec-photos/member.png" class="member-photo">
-                    <div class="member-text">
-                        <h2 class="name-title">Adam Levy</h2>
-                        <p class="member-description">
-                            Vice President
+                            Hi, I'm Cameron!
                         </p>
                     </div>
                 </div>
                 <div class="member-container">
-                    <img src="./photos/exec-photos/member.png" class="member-photo">
-                    <div class="member-text">
-                        <h2 class="name-title">Jackson Wichern</h2>
-                        <p class="member-description">
-                            Treasurer
-                        </p>
-                    </div>
-                </div> -->
-                <div class="member-container">
-                    <img src="./photos/exec-photos/austin.png" class="member-photo">
+                    <img src="./photos/exec-photos/austin.png" class="member-photo" alt="Member Photo">
                     <div class="member-text">
                         <h2 class="name-title">Austin Amelse &nbsp;| &nbsp;Secretary</h2>
                         <p class="member-description">
-                            Hi, I'm Jason! I am currently a sophomore studying finance. I'm from Pleasanton, California and recently moved to Colorado. Some things I love to do are snowboarding and listening to music. 
+                            Hi, I'm Austin!
                         </p>
                     </div>
                 </div>
                 <div class="member-container">
-                    <img src="./photos/exec-photos/cian.jpg" class="member-photo">
+                    <img src="./photos/exec-photos/cian.jpg" class="member-photo" alt="Member Photo">
                     <div class="member-text">
                         <h2 class="name-title">Cian Rose &nbsp;| &nbsp;Membership Orientation Officer</h2>
                         <p class="member-description">
-                            Hi, I'm Jason! I am currently a sophomore studying finance. I'm from Pleasanton, California and recently moved to Colorado. Some things I love to do are snowboarding and listening to music. 
+                            Hi, I'm Cian!
                         </p>
                     </div>
                 </div>
                 <div class="member-container">
-                    <img src="./photos/exec-photos/noah.png" class="member-photo">
+                    <img src="./photos/exec-photos/noah.png" class="member-photo" alt="Member Photo">
                     <div class="member-text">
                         <h2 class="name-title">Noah Greene &nbsp;| &nbsp;Prevention & Wellness</h2>
                         <p class="member-description">
-                            Hi, I'm Jason! I am currently a sophomore studying finance. I'm from Pleasanton, California and recently moved to Colorado. Some things I love to do are snowboarding and listening to music. 
+                            Hi, I'm Noah!
                         </p>
                     </div>
                 </div>
                 <div class="member-container">
-                    <img src="./photos/exec-photos/jason.jpg" class="member-photo">
+                    <img src="./photos/exec-photos/jason.jpg" class="member-photo" alt="Member Photo">
                     <div class="member-text">
                         <h2 class="name-title">Jason Johnson &nbsp;| &nbsp;Warden</h2>
-                        <!-- <p class="member-description">
-                            Warden
-                        </p> -->
                         <p class="member-description">
                             Hi, I'm Jason! I am currently a sophomore studying finance. I'm from Pleasanton, California and recently moved to Colorado. Some things I love to do are snowboarding and listening to music. 
                         </p>
                     </div>
                 </div>
                 <div class="member-container">
-                    <img src="./photos/exec-photos/justin.jpg" class="member-photo">
+                    <img src="./photos/exec-photos/justin.jpg" class="member-photo" alt="Member Photo">
                     <div class="member-text">
                         <h2 class="name-title">Justin Chin &nbsp;| &nbsp;Scholarship</h2>
                         <p class="member-description">
-                            Hi, I'm Jason! I am currently a sophomore studying finance. I'm from Pleasanton, California and recently moved to Colorado. Some things I love to do are snowboarding and listening to music. 
+                            Hi, I'm Justin!
                         </p>
                     </div>
                 </div>
                 <div class="member-container">
-                    <img src="./photos/exec-photos/mike.png" class="member-photo">
+                    <img src="./photos/exec-photos/mike.png" class="member-photo" alt="Member Photo">
                     <div class="member-text">
                         <h2 class="name-title">Mike Andrews &nbsp;| &nbsp;Rush</h2>
                         <p class="member-description">
-                            Hi, I'm Jason! I am currently a sophomore studying finance. I'm from Pleasanton, California and recently moved to Colorado. Some things I love to do are snowboarding and listening to music. 
+                            Hi, I'm Mike!
                         </p>
                     </div>
                 </div>
-                <!-- <div class="member-container">
-                    <img src="./photos/exec-photos/member.png" class="member-photo">
-                    <div class="member-text">
-                        <h2 class="name-title">Ryan Synder</h2>
-                        <p class="member-description">
-                            Philanthropy
-                        </p>
-                    </div>
-                </div>
-                <div class="member-container">
-                    <img src="./photos/exec-photos/member.png" class="member-photo">
-                    <div class="member-text">
-                        <h2 class="name-title">Nicolas Zarich</h2>
-                        <p class="member-description">
-                            Social Chair
-                        </p>
-                    </div>
-                </div> -->
-                <!-- <div class="member-container">
-                    <img src="./photos/exec-photos/member.png" class="member-photo">
-                    <div class="member-text">
-                        <h2 class="name-title">Jon Fitzpatrick</h2>
-                        <p class="member-description">
-                            Chaplain
-                        </p>
-                    </div>
-                </div>
-                <div class="member-container">
-                    <img src="./photos/exec-photos/member.png" class="member-photo">
-                    <div class="member-text">
-                        <h2 class="name-title">Jack Hanley</h2>
-                        <p class="member-description">
-                            Vice President of Alumni Relations
-                        </p>
-                    </div>
-                </div> -->
             </div>
 
         </div>
