--- a/gallery.html
+++ b/gallery.html
@@ -75,6 +75,9 @@
                         <img src="./photos/gallery-photos/3.JPG" alt="">
                     </div>
                     <div class="photo">
+                        <video src="./photos/gallery-photos/video1.MP4" loop muted autoplay ></video>
+                    </div>
+                    <div class="photo">
                         <img src="./photos/gallery-photos/4.JPG" alt="">
                     </div>
                     <div class="photo">
@@ -92,9 +95,6 @@
                     <div class="photo">
                         <img src="./photos/gallery-photos/9.JPG" alt="">
                     </div>
-                    <div class="photo">
-                        <img src="./photos/gallery-photos/10.JPG" alt="">
-                    </div>
                 </div>
 
                 <div class="column">
@@ -102,13 +102,13 @@
                         <img src="./photos/gallery-photos/11.JPG" alt="">
                     </div>
                     <div class="photo">
-                        <img src="./photos/gallery-photos/12.JPG" alt="">
+                        <video src="./photos/gallery-photos/video2.MOV" loop muted autoplay ></video>
                     </div>
                     <div class="photo">
-                        <img src="./photos/gallery-photos/13.JPG" alt="">
+                        <img src="./photos/gallery-photos/10.JPG" alt="">
                     </div>
                     <div class="photo">
-                        <img src="./photos/gallery-photos/14.JPG" alt="">
+                        <img src="./photos/gallery-photos/24.JPG" alt="">
                     </div>
                     <div class="photo">
                         <img src="./photos/gallery-photos/15.JPG" alt="">
@@ -117,7 +117,7 @@
                         <img src="./photos/gallery-photos/16.JPG" alt="">
                     </div>
                     <div class="photo">
-                        <img src="./photos/gallery-photos/17.JPG" alt="">
+                        <img src="./photos/gallery-photos/26.JPG" alt="">
                     </div>
                     <div class="photo">
                         <img src="./photos/gallery-photos/18.JPG" alt="">
@@ -141,16 +141,16 @@
                         <img src="./photos/gallery-photos/23.JPG" alt="">
                     </div>
                     <div class="photo">
-                        <img src="./photos/gallery-photos/24.JPG" alt="">
+                        <img src="./photos/gallery-photos/14.JPG" alt="">
                     </div>
                     <div class="photo">
                         <img src="./photos/gallery-photos/25.JPG" alt="">
                     </div>
                     <div class="photo">
-                        <img src="./photos/gallery-photos/26.JPG" alt="">
+                        <img src="./photos/gallery-photos/27.JPG" alt="">
                     </div>
                     <div class="photo">
-                        <img src="./photos/gallery-photos/27.JPG" alt="">
+                        <video src="./photos/gallery-photos/video3.MOV" loop muted autoplay></video>
                     </div>
                     <div class="photo">
                         <img src="./photos/gallery-photos/28.JPG" alt="">
